v4(40%)